<resources>
    <string name="app_name">ShopCatalog</string>
    <string name="tv_name_default">tv_name</string>
    <string name="tv_desc_default">tv_desc</string>
    <string name="tv_price_default">tv_price</string>
    <string name="btn_txt_default">В избранное</string>
    <string name="img_desc">Основная картинка товара</string>
    <string name="search">search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="main">Категории товаров</string>
    <string name="favorite">Favorite</string>
    <string name="fragment_navigation">Меню</string>
    <string name="new_product">Новинки</string>
    <string name="all_product">Все товары</string>
    <string name="favorites">Избранное</string>
    <string name="music">Музыка</string>
    <string name="places">Место</string>
    <string name="news">Новости</string>
    <string name="error">Ошибка загрузки данных</string>
    <string name="ok">Ok</string>
    <string name="title_home">home</string>
    <string name="viewed_product">Недавно вы смотрели:</string>

    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="storfromcarts">Магазин на карте</string>
    <string name="mycontacts">Список контактов</string>

    <string name="default_address">ул. Московская, 24, Калуга</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Всё для мам</string>
    <string name="geofence_message_notification">До магазина "Все для мам" осталось 200 метров</string>

    <string name="floatingactionbutton">FloatingActionButton</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">favourite</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="label_desc">Описание:</string>
    <string name="label_size">Размеры в наличии:</string>
    <string name="label_prise">Цена:</string>
    <string name="label_supplier">Производитель:</string>
</resources>